--- a/styles.css
+++ b/styles.css
@@ -965,6 +965,32 @@ header p {
     border-color: #FF6B35;
 }
 
+.form-input select,
+select.form-input {
+    background-color: white;
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23333' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    padding-right: 40px;
+}
+
+.form-input select:focus,
+select.form-input:focus {
+    border-color: #FF6B35;
+    box-shadow: 0 0 0 3px rgba(255, 107, 53, 0.1);
+}
+
+.form-input select:disabled,
+select.form-input:disabled {
+    background-color: #f5f5f5;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
 .modal-categorias {
     display: flex;
     flex-direction: column;
@@ -985,6 +1011,26 @@ header p {
     cursor: pointer;
     transition: all 0.3s;
     text-align: left;
+}
+
+.btn-categoria-opcao.categoria-atual {
+    background: #e8f5e9;
+    border-color: #4caf50;
+    font-weight: 600;
+}
+
+.btn-categoria-opcao.categoria-selecionada {
+    background: #FF6B35;
+    color: white;
+    border-color: #FF6B35;
+    font-weight: 600;
+    transform: translateX(5px);
+}
+
+.btn-categoria-opcao.categoria-atual.categoria-selecionada {
+    background: #FF6B35;
+    color: white;
+    border-color: #FF6B35;
 }
 
 .btn-categoria-opcao:hover {
