alterei tudo para reac icons

--- a/frontend/src/components/AdicionarProdutoSection.css
+++ b/frontend/src/components/AdicionarProdutoSection.css
@@ -54,7 +54,8 @@
   transform: translateY(0);
 }
 
-.btn-adicionar-produto i {
+.btn-adicionar-produto svg {
   font-size: 1.15em;
+  flex-shrink: 0;
 }
 
