--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -71,6 +71,12 @@
 
 .modal-header h2 {
   margin: 0;
+  color: white !important;
+  font-weight: 600;
+}
+
+.modal-header * {
+  color: white !important;
 }
 
 .close-modal {
