modal do tutorial finalizado

--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -2,6 +2,10 @@
   display: none;
   position: fixed;
   z-index: 1000;
+}
+
+.modal.show {
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
